--- a/Fibonacci series.ipynb
+++ b/Fibonacci series.ipynb
@@ -40,6 +40,7 @@
     }
    ],
    "source": [
+    "#Taking the input of the series\n",
     "x = input(\"Enter the first number : \")\n",
     "y = input(\"Enter the second number : \")\n",
     "a = input(\"Numbers in the Sequence : \")\n",
@@ -48,7 +49,7 @@
     "y=int(y)\n",
     "a=int(a)\n",
     "\n",
-    "#Prinitng the first two numbers\n",
+    "\n",
     "\n",
     "#Iterating and printing the series\n",
     "if a>=3:\n",
