--- a/Miscellaneous_examples.ipynb
+++ b/Miscellaneous_examples.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "65c31649",
    "metadata": {},
    "outputs": [
@@ -58,9 +58,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7468cf3",
+   "metadata": {},
+   "source": [
+    "### 2. Print the number of special cases for string\n",
+    "String is taken as input and number of times the special conditions that are defined below, is to be printed.  \n",
+    "Condition/case 1 = letter 'a' in words are repeated is 2 or more.\n",
+    "Condition/case 2 = letter 'b' in words are repeated is 2 or more.\n",
+    "\n",
+    "**Example :-** Input = `acc bbb ccc ddd ee ffff abc aba cbb`  \n",
+    "Output  = Special case_1 = $1$ and special case_2 = $2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4c21d4e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input string is : acc bbb ccc ddd ee ffff abc aba cbb\n",
+      "Number of special case 1 :  1 \n",
+      "Number of special case 2 :  2 \n",
+      "Total number of special cases are : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Taking input \n",
+    "test_string = input(\"The input string is : \").split()\n",
+    "\n",
+    "#Setting initial count to zero\n",
+    "count1 = 0\n",
+    "count2 = 0\n",
+    "\n",
+    "#Defining the for loop to count the number of special cases\n",
+    "for i in range(len(test_string)):\n",
+    "    word = test_string[i]\n",
+    "    if word.count('a') > 1:\n",
+    "        count1 += 1\n",
+    "        \n",
+    "    if word.count('b') > 1:\n",
+    "        count2 += 1\n",
+    "\n",
+    "#Defining the total count        \n",
+    "total =  count1 + count2\n",
+    "\n",
+    "#Prinitng the results\n",
+    "print(\"Number of special case 1 : \",count1,\"\\nNumber of special case 2 : \",count2, \"\\nTotal number of special cases are :\", total)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f84c733",
+   "id": "520f202e",
    "metadata": {},
    "outputs": [],
    "source": []
