--- a/7_UI_controlled_input.ipynb
+++ b/7_UI_controlled_input.ipynb
@@ -25,8 +25,10 @@
     "In the most basic level, `interact` function generates the UI controls for function arguments. And then call the functions whenever you manipulate the arguments using the UI.  \n",
     "To use `interact`, you need to define the function first. That function, will be called by `interact`.\n",
     "\n",
-    "Syntex: `interact(f, x= a)`, where `f` is the function having argument `x`.  \n",
-    "The slider generated will have limit -a to 3a.\n"
+    "*Syntex:* `interact(f, x = a)`, where `f` is the function having argument `x`.  \n",
+    "The slider generated will have limit -a to 3a.\n",
+    "\n",
+    "*Syntex:* `interact(f, x=(min, max, steps))`\n"
    ]
   },
   {
@@ -68,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b90c2ca6bd746358f3a67b10d5152df",
+       "model_id": "11c952ff12e74669aef1abb438a5801f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "85e4b18c",
    "metadata": {},
    "outputs": [],
@@ -132,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "fe33cf7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4e66a84601b4aeca14869737e61e327",
+       "model_id": "57b4379f4d6b41b18d884c7a31195df1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +158,7 @@
        "<function __main__.poly_f(m)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e03d1ccb",
    "metadata": {},
    "outputs": [],
@@ -188,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b4be240a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64551c13e88c4647b33b5382ae77788b",
+       "model_id": "31904f8072414d6792cac4437ef4b3d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,48 +214,13 @@
        "<function __main__.f_list(x)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "interact(f_list, x = (0,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "09ba9088",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec990d46e68644828a9b9b6380734de0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='x', max=3, min=-1), Output()), _dom_classes=('widget-int…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.f(x)>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interact(f, x = 1)"
    ]
   },
   {
